--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -18,6 +18,10 @@ body{
     background: #e8e8d9 
 }
 
+#rodape {
+    text-align: center;
+}
+
 a {
     color: #4b566a;
     text-decoration: none;
@@ -26,4 +30,19 @@ a {
 
 .centralizar {
     text-align: center;
+}
+
+h1 {
+    color: #828271;
+    font-size: 1.2em;
+}
+
+.img-campanha {
+    border: 10px;
+    border-color: #c3c3ae;
+    border-style: solid;
+}
+
+span {
+    color: #4b566a;
 }
